--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - "pypy"
 
 install:
-  - pip install -r requirements-dev.txt  -r requirements.txt
+  - pip install -r requirements-dev.txt
   - if [[ $TRAVIS_PYTHON_VERSION == 2* ]]; then pip install unittest2; fi
   - python setup.py install
 
